--- a/chores-java/Dockerfile
+++ b/chores-java/Dockerfile
@@ -1,4 +1,4 @@
 FROM eclipse-temurin:21
 RUN mkdir /opt/app
 COPY chores.jar /opt/app
-CMD ["java", "-Dspring.datasource.url=jdbc:mysql://choresdb.chores.svc.cluster.local:3306/cms?useSSL=false", "-jar", "/opt/app/chores.jar"]
+CMD ["java", "-jar", "/opt/app/chores.jar"]
