--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -1,5 +1,19 @@
+# Dockerfile
+
 FROM jenkins/jenkins:latest-jdk21
+
+# disable the setup wizard as we will set up jenkins as code
 ENV JAVA_OPTS "-Djenkins.install.runSetupWizard=false ${JAVA_OPTS:-}"
 USER jenkins
+
+# copy the list of plugins we want to install
 COPY --chown=jenkins:jenkins plugins.txt /usr/share/jenkins/ref/plugins.txt
+
+# run the install-plugins script to install the plugins
 RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
+
+# copy the config-as-code yaml file into the image
+COPY jenkins-casc.yaml /usr/local/jenkins-casc.yaml
+
+# tell the jenkins config-as-code plugin where to find the yaml file
+ENV CASC_JENKINS_CONFIG /usr/local/jenkins-casc.yaml
