--- a/jenkins/jenkins-casc.yaml
+++ b/jenkins/jenkins-casc.yaml
@@ -25,6 +25,27 @@ jenkins:
   # make sure our jenkins master has 1 executor so that we can run our pipelines
   numExecutors: 1
 
+  # Set the jdk and maven tools to download on demand
+  tool:
+  git:
+    installations:
+    - home: "git"
+      name: "Default"
+  jdk:
+    installations:
+    - name: "jdk"
+  maven:
+    installations:
+    - name: "maven"
+      properties:
+      - installSource:
+          installers:
+          - maven:
+              id: "3.9.6"
+  mavenGlobalConfig:
+    globalSettingsProvider: "standard"
+    settingsProvider: "standard"
+
 # specify the seedjob groovy script that will create the  pipelines for us
 jobs:
   - file: /usr/local/seedjob.groovy
